# atrion

./: .dependency-cruiser.js  .eslintrc.js  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OPEN-SOURCE-ROADMAP.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  readme.md  tsconfig.json  vitest.config.ts
.agent/workflows/: aars.md
.github/workflows/: ci.yml
atrion-physics/: Cargo.toml
atrion-physics/benches/: physics_bench.rs
atrion-physics/src/: lib.rs  momentum.rs  resistance.rs  scar.rs  types.rs  vector.rs
docs/: 0000-idea.md  0001-mathematics.md  0003-constraints.md  0004-diagrams.md  0005-quick-start.md  0006-resources.md
documentation/: v2.0-plan.md
documentation/rfc/: GLOSSARY.md  README.md  RFC-0001-core-mathematical-model.md  RFC-0002-theoretical-extensions.md  RFC-0003-stability-analysis.md  RFC-0004-implementation-guidelines.md  RFC-0005-research-roadmap.md  RFC-0006-visual-metaphors.md  RFC-0007-adaptive-thresholds.md  RFC-0007-pluggable-state-architecture.md  RFC-0008-pluggable-state-architecture.md  RFC-0009-performance-layer.md  RFC-0010-workload-profiles.md
examples/: README.md  express-middleware.ts  long-running-task.ts  nestjs-interceptor.ts  workload-profiles.ts  wrapper-class.ts
lab/: README.md  manual-test-redis.ts  manual-test-v2.ts
lab/autotuner/: autotuner-test.ts
lab/cb-recovery/: cb-server.ts  recovery-client.ts
lab/chaos/: chaos-server.ts  guardian-client.ts
lab/ecommerce/: blackfriday-client.ts  ecommerce-server.ts
scripts/: build-wasm.sh
src/: atrion.ts  index.ts
src/core/: clock.ts  (+15 more)
(+48 files in other folders)
